--- a/1-datasets-info/4-nih-dataset.ipynb
+++ b/1-datasets-info/4-nih-dataset.ipynb
@@ -15,7 +15,7 @@
    "id": "musical-questionnaire",
    "metadata": {},
    "source": [
-    "O conjunto de dados compreende 112.120 imagens de raios-X de visão frontalcom quatorze rótulos relacionados a distúrbios pulmonares, extraídos dos relatóriosradiológicos associados usando processamento de linguagem natural. Quatorze pato-logias torácicas comuns incluem Atelectasia, Consolidação, Infiltração, Pneumotórax,Edema, Enfisema, Fibrose, Efusão, Pneumonia, Espessamento Pleural, Cardiomegalia,Nódulo, Massa e Hérnia, que é uma extensão dos 8 padrões de doença comuns listadosno artigo CVPR 2017 (WANG et al., 2017)."
+    "O conjunto de dados compreende 112.120 imagens de raios-X de visão frontal com quatorze rótulos relacionados a distúrbios pulmonares, extraídos dos relatórios radiológicos associados usando processamento de linguagem natural. Quatorze patologias torácicas comuns incluem Atelectasia, Consolidação, Infiltração, Pneumotórax, Edema, Enfisema, Fibrose, Efusão, Pneumonia, Espessamento Pleural, Cardiomegalia, Nódulo, Massa e Hérnia, que é uma extensão dos 8 padrões de doença comuns listados no artigo CVPR 2017 (WANG et al., 2017)."
    ]
   },
   {
