--- a/1-datasets-info/1-montgomery-dataset.ipynb
+++ b/1-datasets-info/1-montgomery-dataset.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Conjunto de Dados 1: _Montgomery County X-ray Set_\n",
     "***\n",
-    "> Disponível em: <https://www.kaggle.com/kmader/pulmonary-chest-xray-abnormalities>. Acesso em19 fev. 2021."
+    "> Disponível em: <https://www.kaggle.com/kmader/pulmonary-chest-xray-abnormalities>. Acesso em 19 fev. 2021."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "id": "invisible-ontario",
    "metadata": {},
    "source": [
-    "As imagens de raios-X neste conjunto de dados foram adquiridas do programa decontrole da tuberculose do Departamento de Saúde e Serviços Humanos do Condadode Montgomery, MD, EUA. Esse conjunto de dados contém 138 radiografias póstero-anterior, das quais 80 são radiografias normais e 58 são anormais com manifestaçõesde tuberculose. Todas as imagens são desidentificadas e disponíveis no formato DICOM(Digital Imaging and Communications in Medicine). O conjunto cobre uma ampla gamade anormalidades, incluindo efusões e padrões miliares. O conjunto de dados incluileituras de radiologia disponíveis como um arquivo de texto, mantendo a identidade dopaciente preservada por motivos éticos e legais (JAEGER et al., 2013)."
+    "As imagens de raios-X neste conjunto de dados foram adquiridas do programa de controle da tuberculose do Departamento de Saúde e Serviços Humanos do Condado de Montgomery, MD, EUA. Esse conjunto de dados contém 138 radiografias póstero-anterior, das quais 80 são radiografias normais e 58 são anormais com manifestações de tuberculose. Todas as imagens são desidentificadas e disponíveis no formato DICOM (Digital Imaging and Communications in Medicine). O conjunto cobre uma ampla gama de anormalidades, incluindo efusões e padrões miliares. O conjunto de dados inclui leituras de radiologia disponíveis como um arquivo de texto, mantendo a identidade do paciente preservada por motivos éticos e legais (JAEGER et al., 2013)."
    ]
   },
   {
@@ -25,7 +25,7 @@
    "source": [
     "## Referência\n",
     "***\n",
-    "- JAEGER, S. et al. Automatic tuberculosis screening using chest radiographs.IEEEtransactions on medical imaging, IEEE, v. 33, n. 2, p. 233–245, 2013."
+    "- JAEGER, S. et al. Automatic tuberculosis screening using chest radiographs. IEEE transactions on medical imaging, IEEE, v. 33, n. 2, p. 233–245, 2013."
    ]
   }
  ],
