--- a/3-models/1-vgg19.ipynb
+++ b/3-models/1-vgg19.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "selective-think",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "portuguese-summer",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "southeast-cyprus",
    "metadata": {},
    "outputs": [],
@@ -49,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "disabled-memorabilia",
    "metadata": {},
    "outputs": [],
    "source": [
     "# transferência de aprendizado\n",
-    "conv_base = VGG19(weights = 'imagenet', include_top=False, input_shape = (256, 256, 3))"
+    "conv_base = VGG19(weights = 'imagenet', include_top = False, input_shape = (256, 256, 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "according-disposal",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "organized-montana",
    "metadata": {},
    "outputs": [
@@ -207,8 +207,8 @@
       "block5_pool (MaxPooling2D)   (None, 8, 8, 512)         0         \n",
       "=================================================================\n",
       "Total params: 20,024,384\n",
-      "Trainable params: 9,439,232\n",
-      "Non-trainable params: 10,585,152\n",
+      "Trainable params: 20,024,384\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "hindu-given",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
     "# conectando a arquitetura vgg19 a uma rede neural densa\n",
     "model = models.Sequential()\n",
     "model.add(conv_base)\n",
-    "model.add(layers.MaxPooling2D())\n",
+    "#model.add(layers.MaxPooling2D())\n",
     "model.add(layers.BatchNormalization())\n",
     "model.add(layers.Flatten())\n",
     "model.add(layers.Dense(units = 128, activation = 'relu'))\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "undefined-interval",
    "metadata": {},
    "outputs": [
@@ -252,21 +252,19 @@
       "=================================================================\n",
       "vgg19 (Functional)           (None, 8, 8, 512)         20024384  \n",
       "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 4, 4, 512)         0         \n",
+      "batch_normalization (BatchNo (None, 8, 8, 512)         2048      \n",
       "_________________________________________________________________\n",
-      "batch_normalization (BatchNo (None, 4, 4, 512)         2048      \n",
+      "flatten (Flatten)            (None, 32768)             0         \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 8192)              0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 128)               1048704   \n",
+      "dense (Dense)                (None, 128)               4194432   \n",
       "_________________________________________________________________\n",
       "dropout (Dropout)            (None, 128)               0         \n",
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 2)                 258       \n",
       "=================================================================\n",
-      "Total params: 21,075,394\n",
-      "Trainable params: 10,489,218\n",
-      "Non-trainable params: 10,586,176\n",
+      "Total params: 24,221,122\n",
+      "Trainable params: 24,220,098\n",
+      "Non-trainable params: 1,024\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -277,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "fancy-farming",
    "metadata": {},
    "outputs": [],
@@ -293,6 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# treinando a rede \n",
     "history = model.fit_generator(data_aug, steps_per_epoch = len(trainX) // batch_size, \n",
     "                              validation_data = (testX, testY), validation_steps = len(testX) // batch_size,\n",
     "                              callbacks = callbacks, epochs = 100)"
