--- a/4-experiments/experimento1-dataset1-parte2.ipynb
+++ b/4-experiments/experimento1-dataset1-parte2.ipynb
@@ -34,10 +34,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
-    "from tensorflow.keras.applications import VGG19\n",
-    "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras import layers\n",
-    "from tensorflow.keras import models\n",
+    "from tensorflow.keras import Model\n",
+    "from tensorflow.keras.applications.inception_v3 import InceptionV3\n",
     "from tensorflow.keras import optimizers\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "\n",
@@ -304,9 +303,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# callback para salvar os pesos que tiveram o melhor desempenho nos dados de validação\n",
-    "filepath=\"transferlearning_weights.hdf5\"\n",
-    "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
+    "# baixando os pesos treinados da rede inception\n",
+    "!wget --no-check-certificate \\\n",
+    "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
+    "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
    ]
   },
   {
@@ -316,8 +316,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# definindo um array de callbacks\n",
-    "callbacks = [checkpoint]"
+    "# referenciando o local em que os pesos estão armazenados\n",
+    "local_weights_file = '/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
+    "\n",
+    "# carregando a arquitetura inception pré-treinada\n",
+    "pre_trained_model = InceptionV3(input_shape = (256, 256, 3), \n",
+    "                                include_top = False, \n",
+    "                                weights = None)\n",
+    "\n",
+    "# carregando os pesos treinados com outros dados \n",
+    "pre_trained_model.load_weights(local_weights_file)\n",
+    "\n",
+    "# definindo as flags iniciais  \n",
+    "pre_trained_model.trainable = True\n",
+    "set_trainable = False\n",
+    "\n",
+    "# para a arquitetura inception, a rede será retreinada a partir da camada 'mixed6'\n",
+    "for layer in pre_trained_model.layers:\n",
+    "    if layer.name == 'mixed6':\n",
+    "        set_trainable = True\n",
+    "    if set_trainable:\n",
+    "        layer.trainable = True\n",
+    "    else:\n",
+    "        layer.trainable = False\n",
+    "\n",
+    "# visualizando a arquitetura definida\n",
+    "pre_trained_model.summary()\n",
+    "\n",
+    "# obtendo a última camada como sendo a nomeada por 'mixed7'\n",
+    "last_layer = pre_trained_model.get_layer('mixed7')\n",
+    "last_output = last_layer.output"
    ]
   },
   {
@@ -327,8 +355,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# transferência de aprendizado\n",
-    "conv_base = VGG19(weights = 'imagenet', include_top = False, input_shape = (256, 256, 3))"
+    "# definindo uma camada de achatamento\n",
+    "x = layers.Flatten()(last_output)\n",
+    "# conecatando a rede uma camada com 1024 neurônios e função de ativação relu\n",
+    "x = layers.Dense(units = 1024, activation = 'relu')(x)     \n",
+    "# conecatando a rede uma camada com 128 neurônios e função de ativação relu\n",
+    "x = layers.Dense(units = 512, activation = 'relu')(x) \n",
+    "# aplicando uma camada de dropout com uma taxa de 20% (normalização)\n",
+    "x = layers.Dropout(rate = 0.2)(x)                  \n",
+    "# adicionando uma camada de saída com um neurônio e uma função de ativação sigmoide\n",
+    "x = layers.Dense  (units = 1, activation = 'sigmoid')(x)           \n",
+    "\n",
+    "# conecatando as camadas definidas acima com a arquitetura inception\n",
+    "model = Model(pre_trained_model.input, x) \n",
+    "\n",
+    "# compilando a rede \n",
+    "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.0001), loss = 'binary_crossentropy', \n",
+    "              metrics = ['acc']) "
    ]
   },
   {
@@ -397,8 +440,10 @@
     }
    ],
    "source": [
-    "# visualizando a arquitetura utilizada\n",
-    "conv_base.summary()"
+    "# definindo o caminho pelo qual os pesos serão armazenados \n",
+    "filepath = \"transferlearning_weights.hdf5\"\n",
+    "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
+    "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
    ]
   },
   {
@@ -408,14 +453,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# conectando a arquitetura vgg19 a uma rede neural densa\n",
-    "model = models.Sequential()\n",
-    "model.add(conv_base)\n",
-    "model.add(layers.BatchNormalization())\n",
-    "model.add(layers.Flatten())\n",
-    "model.add(layers.Dense(units = 128, activation = 'relu'))\n",
-    "model.add(layers.Dropout(rate = 0.2))\n",
-    "model.add(layers.Dense(units = 1, activation = 'sigmoid'))"
+    "# definindo um array de callbacks\n",
+    "callbacks = [checkpoint]"
    ]
   },
   {
@@ -452,37 +491,7 @@
     }
    ],
    "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "abroad-consciousness",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compilando o modelo\n",
-    "model.compile(loss = 'binary_crossentropy', optimizer = 'adam', metrics = ['acc'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "contained-prison",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "1/2 [==============>...............] - ETA: 7:15 - loss: 0.7563 - acc: 0.6562"
-     ]
-    }
-   ],
-   "source": [
-    "# treinando a rede \n",
+    "# treinando a rede neural convolucional\n",
     "history = model.fit_generator(train_generator, steps_per_epoch = 88 // 32, \n",
     "                              validation_data = valid_generator, callbacks = callbacks, epochs = 100)"
    ]
