--- a/2-datasets-preprocessing/3-dataset-vinbigdata.ipynb
+++ b/2-datasets-preprocessing/3-dataset-vinbigdata.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "placed-discipline",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,12 @@
    "id": "cordless-exhibit",
    "metadata": {},
    "source": [
-    "### Baixando os dados"
+    "### Pré-processamento nos dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "controlling-fraction",
    "metadata": {},
    "outputs": [],
@@ -56,20 +56,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "beautiful-danger",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total de imagens disponíveis: 15000\n"
+     ]
+    }
+   ],
    "source": [
     "print('total de imagens disponíveis:', str(len(set(dataframe['image_path']))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "public-writing",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "No finding            31818\n",
+       "Aortic enlargement     7162\n",
+       "Cardiomegaly           5427\n",
+       "Pleural thickening     4842\n",
+       "Pulmonary fibrosis     4655\n",
+       "Nodule/Mass            2580\n",
+       "Lung Opacity           2483\n",
+       "Pleural effusion       2476\n",
+       "Other lesion           2203\n",
+       "Infiltration           1247\n",
+       "ILD                    1000\n",
+       "Calcification           960\n",
+       "Consolidation           556\n",
+       "Atelectasis             279\n",
+       "Pneumothorax            226\n",
+       "Name: class_name, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# visualizando os casos disponíveis\n",
     "dataframe['class_name'].value_counts()"
@@ -77,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "sufficient-expense",
    "metadata": {},
    "outputs": [],
@@ -91,10 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "other-actor",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total de dados após a filtração: 13948\n"
+     ]
+    }
+   ],
    "source": [
     "# separando os casos rotulados como normais e anormais\n",
     "normal_cases = dataframe[(dataframe.class_id == 14) & (dataframe.class_name == 'No finding')]\n",
@@ -105,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "equipped-thousand",
    "metadata": {},
    "outputs": [],
@@ -123,39 +165,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "upper-livestock",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quantidade de dados rotulados como normais: 10606\n",
+      "quantidade de dados rotulados como anormais: 3342\n"
+     ]
+    }
+   ],
    "source": [
-    "print('quantidade de dados rotulados como normais:', len(normal_path))\n",
-    "print('quantidade de dados rotulados como anormais:', len(abnormal_path))"
+    "print('quantidade de dados rotulados como normais:', len(normal_data))\n",
+    "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "beneficial-annual",
    "metadata": {},
    "outputs": [],
    "source": [
-    "normal, _ = train_test_split(normal, test_size = 0.65, random_state = 42)"
+    "# removendo 69% dos casos normais para balancear os dados\n",
+    "normal, _ = train_test_split(normal_data, test_size = 0.69, random_state = 42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "id": "becoming-jesus",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quantidade de dados rotulados como normais: 3287\n",
+      "quantidade de dados rotulados como anormais: 3342\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('quantidade de dados rotulados como normais:', len(normal))\n",
+    "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "binary-opera",
    "metadata": {},
    "outputs": [],
    "source": [
     "# concatenando os dataframes de casos normais e anormais\n",
-    "full_data = pd.concat([normal_data, abnormal_data])"
+    "full_data = pd.concat([normal, abnormal_data])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "academic-browse",
    "metadata": {},
    "outputs": [],
@@ -166,19 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "right-heaven",
    "metadata": {},
    "outputs": [],
    "source": [
     "# modificando o formato dos dados para float32\n",
     "dict_type = {'target': 'float32'}\n",
-    "full_data = full_data.astype(dict_type)"
+    "full_data = full_data.astype(dict_type) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "sorted-malaysia",
    "metadata": {},
    "outputs": [],
@@ -190,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "single-practice",
    "metadata": {},
    "outputs": [],
@@ -202,10 +274,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "fatal-office",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quantidade de imagens de treinamento: 4242\n",
+      "quantidade de rótulos de treinamento: 4242\n",
+      "quantidade de imagens de teste: 1326\n",
+      "quantidade de rótulos de teste: 1326\n",
+      "quantidade de imagens de validação: 1061\n",
+      "quantidade de rótulos de validação: 1061\n"
+     ]
+    }
+   ],
    "source": [
     "# visualizando a quantidade de dados\n",
     "print('quantidade de imagens de treinamento:', len(train_df['filepath']))\n",
@@ -221,7 +306,7 @@
    "id": "electric-trance",
    "metadata": {},
    "source": [
-    "### Gerados de Dados para a rede pelo Tensorflow"
+    "### Gerador de dados para a rede pelo Tensorflow"
    ]
   },
   {
@@ -229,19 +314,29 @@
    "id": "structural-moment",
    "metadata": {},
    "source": [
-    "> **Opção 1**"
+    "- **Opção 1**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "skilled-yorkshire",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 4242 validated image filenames.\n",
+      "Found 1061 validated image filenames.\n",
+      "Found 1326 validated image filenames.\n"
+     ]
+    }
+   ],
    "source": [
     "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
     "image_generator = ImageDataGenerator(samplewise_center = True, samplewise_std_normalization = True,\n",
-    "                                     rotation_range = 20, zoom_range = 0.2)\n",
+    "                                     rotation_range = 10, zoom_range = 0.2)\n",
     "\n",
     "# criando o gerador de imagens de treinamento \n",
     "train_generator = image_generator.flow_from_dataframe(\n",
@@ -253,7 +348,6 @@
     "                                                      seed = 42,\n",
     "                                                      shuffle = True,\n",
     "                                                      class_mode = 'raw',\n",
-    "                                                      color_mode = 'rgb',\n",
     "                                                      target_size = (256, 256))\n",
     "# criando o gerador de imagens de validação \n",
     "valid_generator = image_generator.flow_from_dataframe(\n",
@@ -287,78 +381,29 @@
    "id": "regional-lawsuit",
    "metadata": {},
    "source": [
-    "> **Opção 2**"
+    "- **Opção 2**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "normal-begin",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
-    "image_generator = ImageDataGenerator(preprocessing_function = histogram_equalization,\n",
-    "                                     rescale = 1./255., rotation_range = 20, zoom_range = 0.2)\n",
-    "\n",
-    "# criando o gerador de imagens de treinamento \n",
-    "train_generator = image_generator.flow_from_dataframe(\n",
-    "                                                      dataframe = train_df,\n",
-    "                                                      directory = '',\n",
-    "                                                      x_col = 'filepath',\n",
-    "                                                      y_col = 'target',\n",
-    "                                                      batch_size = 32,\n",
-    "                                                      seed = 42,\n",
-    "                                                      shuffle = True,\n",
-    "                                                      class_mode = 'raw',\n",
-    "                                                      color_mode = 'rgb',\n",
-    "                                                      target_size = (256, 256))\n",
-    "# criando o gerador de imagens de validação \n",
-    "valid_generator = image_generator.flow_from_dataframe(\n",
-    "                                                      dataframe = validation_df,\n",
-    "                                                      directory = '.', \n",
-    "                                                      x_col = 'filepath',\n",
-    "                                                      y_col = 'target',\n",
-    "                                                      batch_size = 32,\n",
-    "                                                      seed = 42,\n",
-    "                                                      shuffle = True,\n",
-    "                                                      class_mode = 'raw',\n",
-    "                                                      target_size = (256, 256))\n",
-    "\n",
-    "# normalizando as imagens de teste \n",
-    "test_datagen = ImageDataGenerator(preprocessing_function = histogram_equalization,\n",
-    "                                  rescale = 1./255.)\n",
-    "\n",
-    "test_generator = test_datagen.flow_from_dataframe(\n",
-    "                                                  dataframe = test_df, \n",
-    "                                                  directory = '.',\n",
-    "                                                  x_col = 'filepath',\n",
-    "                                                  y_col = 'target',\n",
-    "                                                  batch_size = 32,\n",
-    "                                                  seed = 42,\n",
-    "                                                  shuffle = True,\n",
-    "                                                  class_mode = 'raw',\n",
-    "                                                  target_size = (256, 256))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "specialized-testimony",
-   "metadata": {},
-   "source": [
-    "> **Opção 3**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "great-fluid",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 4242 validated image filenames.\n",
+      "Found 1061 validated image filenames.\n",
+      "Found 1326 validated image filenames.\n"
+     ]
+    }
+   ],
    "source": [
     "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
     "image_generator = ImageDataGenerator(rescale = 1./255.,\n",
-    "                                     rotation_range = 20, zoom_range = 0.2)\n",
+    "                                     rotation_range = 10, zoom_range = 0.2)\n",
     "\n",
     "# criando o gerador de imagens de treinamento \n",
     "train_generator = image_generator.flow_from_dataframe(\n",
