experimentos com o dataset vinbigdata

--- a/4-experiments/experimento1-dataset4-parte1.ipynb
+++ b/4-experiments/experimento1-dataset4-parte1.ipynb
@@ -2,12 +2,422 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "wired-grave",
+   "id": "demanding-medication",
    "metadata": {},
    "source": [
     "# Experimento 1\n",
     "***\n",
-    "- Conjunto de Dados: "
+    "- Conjunto de Dados: VinBigData\n",
+    "- Testando a equalização de histograma em comparação com a mudança típica de escala"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "laughing-kazakhstan",
+   "metadata": {},
+   "source": [
+    "### Importação dos pacotes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "applicable-billion",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from sklearn.metrics import confusion_matrix, precision_recall_fscore_support\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras import Model\n",
+    "from tensorflow.keras.applications.inception_v3 import InceptionV3\n",
+    "from tensorflow.keras import optimizers\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "worst-fisher",
+   "metadata": {},
+   "source": [
+    "### Pré-processamento nos dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "regulation-costume",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lendo os dados de um arquivo csv\n",
+    "dataframe = pd.read_csv('../datasets/archive (1)/vinbigdata/train.csv')\n",
+    "# criando uma coluna com os caminhos relativos as imagens\n",
+    "dataframe['image_path'] = '../datasets/archive (1)/vinbigdata/train/' + dataframe.image_id + '.jpg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "necessary-medication",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('total de imagens disponíveis:', str(len(set(dataframe['image_path']))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "widespread-enclosure",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualizando os casos disponíveis\n",
+    "dataframe['class_name'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "informal-ottawa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removendo os casos não relativos a distúrbios pulmonares\n",
+    "dataframe = dataframe[dataframe.class_name != 'Aortic enlargement']\n",
+    "dataframe = dataframe[dataframe.class_name != 'Cardiomegaly']\n",
+    "dataframe = dataframe[dataframe.class_name != 'Other lesion']\n",
+    "dataframe = dataframe[dataframe.class_name != 'Consolidation']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "plastic-master",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separando os casos rotulados como normais e anormais\n",
+    "normal_cases = dataframe[(dataframe.class_id == 14) & (dataframe.class_name == 'No finding')]\n",
+    "abnormal_cases = dataframe[(dataframe.class_id != 14) & (dataframe.class_name != 'No finding')]\n",
+    "\n",
+    "print('total de dados após a filtração:', str(len(set(normal_cases['image_path'])) + len(set(abnormal_cases['image_path']))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "secure-alignment",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removendo as imagens repetidas\n",
+    "normal_path = list(set(normal_cases['image_path']))\n",
+    "abnormal_path = list(set(abnormal_cases['image_path']))\n",
+    "\n",
+    "# criando dataframes especifos com caminhos para as imagens e rótulos\n",
+    "normal_data = pd.DataFrame(normal_path, columns = ['filepath'])\n",
+    "normal_data['target'] = 0\n",
+    "abnormal_data = pd.DataFrame(abnormal_path, columns = ['filepath'])\n",
+    "abnormal_data['target'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sudden-platform",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('quantidade de dados rotulados como normais:', len(normal_data))\n",
+    "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "prompt-embassy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removendo 69% dos casos normais para balancear os dados\n",
+    "normal, _ = train_test_split(normal_data, test_size = 0.69, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sitting-works",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('quantidade de dados rotulados como normais:', len(normal))\n",
+    "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "funny-document",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# concatenando os dataframes de casos normais e anormais\n",
+    "full_data = pd.concat([normal, abnormal_data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "golden-reading",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# misturando todos os dados do dataframe e reiniciando os valores dos índices \n",
+    "full_data = full_data.sample(frac = 1, axis = 0, random_state = 42).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "alpha-poster",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# modificando o formato dos dados para float32\n",
+    "dict_type = {'target': 'float32'}\n",
+    "full_data = full_data.astype(dict_type) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "medium-brand",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separando os dados de treinamento e de teste\n",
+    "train_df, test_df = train_test_split(full_data, stratify = full_data['target'],\n",
+    "                                     test_size = 0.2, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "extraordinary-retrieval",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separando os dados de validação dos dados de treinamento\n",
+    "train_df, validation_df = train_test_split(train_df, stratify = train_df['target'],\n",
+    "                                           test_size = 0.2, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dependent-collins",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualizando a quantidade de dados\n",
+    "print('quantidade de imagens de treinamento:', len(train_df['filepath']))\n",
+    "print('quantidade de rótulos de treinamento:', len(train_df['target']))\n",
+    "print('quantidade de imagens de teste:', len(test_df['filepath']))\n",
+    "print('quantidade de rótulos de teste:', len(test_df['target']))\n",
+    "print('quantidade de imagens de validação:', len(validation_df['filepath']))\n",
+    "print('quantidade de rótulos de validação:', len(validation_df['target']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "western-current",
+   "metadata": {},
+   "source": [
+    "### Aplicando mudança de escala típica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "requested-pakistan",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
+    "image_generator = ImageDataGenerator(rescale = 1./255.,\n",
+    "                                     rotation_range = 10, zoom_range = 0.2)\n",
+    "\n",
+    "# criando o gerador de imagens de treinamento \n",
+    "train_generator = image_generator.flow_from_dataframe(\n",
+    "                                                      dataframe = train_df,\n",
+    "                                                      directory = '',\n",
+    "                                                      x_col = 'filepath',\n",
+    "                                                      y_col = 'target',\n",
+    "                                                      batch_size = 32,\n",
+    "                                                      seed = 42,\n",
+    "                                                      shuffle = True,\n",
+    "                                                      class_mode = 'raw',\n",
+    "                                                      color_mode = 'rgb',\n",
+    "                                                      target_size = (256, 256))\n",
+    "# criando o gerador de imagens de validação \n",
+    "valid_generator = image_generator.flow_from_dataframe(\n",
+    "                                                      dataframe = validation_df,\n",
+    "                                                      directory = '.', \n",
+    "                                                      x_col = 'filepath',\n",
+    "                                                      y_col = 'target',\n",
+    "                                                      batch_size = 32,\n",
+    "                                                      seed = 42,\n",
+    "                                                      shuffle = True,\n",
+    "                                                      class_mode = 'raw',\n",
+    "                                                      target_size = (256, 256))\n",
+    "\n",
+    "# normalizando as imagens de teste \n",
+    "test_datagen = ImageDataGenerator(rescale = 1./255.)\n",
+    "\n",
+    "test_generator = test_datagen.flow_from_dataframe(\n",
+    "                                                  dataframe = test_df, \n",
+    "                                                  directory = '.',\n",
+    "                                                  x_col = 'filepath',\n",
+    "                                                  y_col = 'target',\n",
+    "                                                  batch_size = 32,\n",
+    "                                                  seed = 42,\n",
+    "                                                  shuffle = True,\n",
+    "                                                  class_mode = 'raw',\n",
+    "                                                  target_size = (256, 256))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compatible-fetish",
+   "metadata": {},
+   "source": [
+    "### Preparando a rede neural convolucional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "anonymous-rotation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# baixando os pesos treinados da rede inception\n",
+    "!wget --no-check-certificate \\\n",
+    "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
+    "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "compact-knife",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# referenciando o local em que os pesos estão armazenados\n",
+    "local_weights_file = '/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
+    "\n",
+    "# carregando a arquitetura inception pré-treinada\n",
+    "pre_trained_model = InceptionV3(input_shape = (256, 256, 3), \n",
+    "                                include_top = False, \n",
+    "                                weights = None)\n",
+    "\n",
+    "# carregando os pesos treinados com outros dados \n",
+    "pre_trained_model.load_weights(local_weights_file)\n",
+    "\n",
+    "# definindo as flags iniciais  \n",
+    "pre_trained_model.trainable = True\n",
+    "set_trainable = False\n",
+    "\n",
+    "# para a arquitetura inception, a rede será retreinada a partir da camada 'mixed6'\n",
+    "for layer in pre_trained_model.layers:\n",
+    "    if layer.name == 'mixed6':\n",
+    "        set_trainable = True\n",
+    "    if set_trainable:\n",
+    "        layer.trainable = True\n",
+    "    else:\n",
+    "        layer.trainable = False\n",
+    "\n",
+    "# visualizando a arquitetura definida\n",
+    "pre_trained_model.summary()\n",
+    "\n",
+    "# obtendo a última camada como sendo a nomeada por 'mixed7'\n",
+    "last_layer = pre_trained_model.get_layer('mixed7')\n",
+    "last_output = last_layer.output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "double-sound",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# definindo uma camada de achatamento\n",
+    "x = layers.Flatten()(last_output)\n",
+    "# conecatando a rede uma camada com 1024 neurônios e função de ativação relu\n",
+    "x = layers.Dense(units = 1024, activation = 'relu')(x)     \n",
+    "# conecatando a rede uma camada com 128 neurônios e função de ativação relu\n",
+    "x = layers.Dense(units = 512, activation = 'relu')(x) \n",
+    "# aplicando uma camada de dropout com uma taxa de 20% (normalização)\n",
+    "x = layers.Dropout(rate = 0.2)(x)                  \n",
+    "# adicionando uma camada de saída com um neurônio e uma função de ativação sigmoide\n",
+    "x = layers.Dense  (units = 1, activation = 'sigmoid')(x)           \n",
+    "\n",
+    "# conecatando as camadas definidas acima com a arquitetura inception\n",
+    "model = Model(pre_trained_model.input, x) \n",
+    "\n",
+    "# compilando a rede \n",
+    "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.0001), loss = 'binary_crossentropy', \n",
+    "              metrics = ['acc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "found-baker",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# definindo o caminho pelo qual os pesos serão armazenados \n",
+    "filepath = \"transferlearning_weights.hdf5\"\n",
+    "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
+    "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "forward-guide",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# definindo um array de callbacks\n",
+    "callbacks = [checkpoint]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "vital-constitutional",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# treinando a rede neural convolucional\n",
+    "history = model.fit_generator(train_generator, steps_per_epoch = 4242 // 32, \n",
+    "                              validation_data = valid_generator, validation_steps = 1061 // 32,\n",
+    "                              callbacks = callbacks, epochs = 100)"
    ]
   }
  ],
