--- a/4-experiments/experimento1-dataset4-parte2.ipynb
+++ b/4-experiments/experimento1-dataset4-parte2.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "patent-bracelet",
+   "id": "demanding-medication",
    "metadata": {},
    "source": [
-    "# Conjunto de Dados 3: *VinBigData Image Dataset*\n",
+    "# Experimento 1\n",
     "***\n",
-    "> Disponível em: <https://www.kaggle.com/awsaf49/vinbigdata-original-image-dataset>. Acesso em 24 fev. 2021."
+    "- Conjunto de Dados: VinBigData\n",
+    "- Testando a equalização de histograma em comparação com a mudança típica de escala"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "rental-feature",
+   "id": "laughing-kazakhstan",
    "metadata": {},
    "source": [
     "### Importação dos pacotes"
@@ -20,14 +21,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "placed-discipline",
+   "execution_count": null,
+   "id": "applicable-billion",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from sklearn.metrics import confusion_matrix, precision_recall_fscore_support\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras import Model\n",
+    "from tensorflow.keras.applications.inception_v3 import InceptionV3\n",
+    "from tensorflow.keras import optimizers\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -35,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cordless-exhibit",
+   "id": "worst-fisher",
    "metadata": {},
    "source": [
     "### Pré-processamento nos dados"
@@ -43,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "controlling-fraction",
+   "execution_count": null,
+   "id": "regulation-costume",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,54 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "beautiful-danger",
+   "execution_count": null,
+   "id": "necessary-medication",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total de imagens disponíveis: 15000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('total de imagens disponíveis:', str(len(set(dataframe['image_path']))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "public-writing",
+   "execution_count": null,
+   "id": "widespread-enclosure",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "No finding            31818\n",
-       "Aortic enlargement     7162\n",
-       "Cardiomegaly           5427\n",
-       "Pleural thickening     4842\n",
-       "Pulmonary fibrosis     4655\n",
-       "Nodule/Mass            2580\n",
-       "Lung Opacity           2483\n",
-       "Pleural effusion       2476\n",
-       "Other lesion           2203\n",
-       "Infiltration           1247\n",
-       "ILD                    1000\n",
-       "Calcification           960\n",
-       "Consolidation           556\n",
-       "Atelectasis             279\n",
-       "Pneumothorax            226\n",
-       "Name: class_name, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# visualizando os casos disponíveis\n",
     "dataframe['class_name'].value_counts()"
@@ -111,8 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "sufficient-expense",
+   "execution_count": null,
+   "id": "informal-ottawa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,18 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "other-actor",
+   "execution_count": null,
+   "id": "plastic-master",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total de dados após a filtração: 13948\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# separando os casos rotulados como normais e anormais\n",
     "normal_cases = dataframe[(dataframe.class_id == 14) & (dataframe.class_name == 'No finding')]\n",
@@ -147,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "equipped-thousand",
+   "execution_count": null,
+   "id": "secure-alignment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,19 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "upper-livestock",
+   "execution_count": null,
+   "id": "sudden-platform",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "quantidade de dados rotulados como normais: 10606\n",
-      "quantidade de dados rotulados como anormais: 3342\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('quantidade de dados rotulados como normais:', len(normal_data))\n",
     "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
@@ -185,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "beneficial-annual",
+   "execution_count": null,
+   "id": "prompt-embassy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,19 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "moderate-assets",
+   "execution_count": null,
+   "id": "sitting-works",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "quantidade de dados rotulados como normais: 3287\n",
-      "quantidade de dados rotulados como anormais: 3342\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('quantidade de dados rotulados como normais:', len(normal))\n",
     "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
@@ -216,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "binary-opera",
+   "execution_count": null,
+   "id": "funny-document",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "academic-browse",
+   "execution_count": null,
+   "id": "golden-reading",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,8 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "right-heaven",
+   "execution_count": null,
+   "id": "alpha-poster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "sorted-malaysia",
+   "execution_count": null,
+   "id": "medium-brand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,8 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "single-practice",
+   "execution_count": null,
+   "id": "extraordinary-retrieval",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,23 +225,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "fatal-office",
+   "execution_count": null,
+   "id": "dependent-collins",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "quantidade de imagens de treinamento: 4242\n",
-      "quantidade de rótulos de treinamento: 4242\n",
-      "quantidade de imagens de teste: 1326\n",
-      "quantidade de rótulos de teste: 1326\n",
-      "quantidade de imagens de validação: 1061\n",
-      "quantidade de rótulos de validação: 1061\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# visualizando a quantidade de dados\n",
     "print('quantidade de imagens de treinamento:', len(train_df['filepath']))\n",
@@ -303,36 +241,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electric-trance",
+   "id": "western-current",
    "metadata": {},
    "source": [
-    "### Gerador de dados para a rede pelo Tensorflow"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "structural-moment",
-   "metadata": {},
-   "source": [
-    "- **Opção 1**"
+    "### Aplicando equalização de histograma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "skilled-yorkshire",
+   "execution_count": null,
+   "id": "requested-pakistan",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 4242 validated image filenames.\n",
-      "Found 1061 validated image filenames.\n",
-      "Found 1326 validated image filenames.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
     "image_generator = ImageDataGenerator(samplewise_center = True, samplewise_std_normalization = True,\n",
@@ -378,70 +298,125 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regional-lawsuit",
+   "id": "compatible-fetish",
    "metadata": {},
    "source": [
-    "- **Opção 2**"
+    "### Preparando a rede neural convolucional"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "great-fluid",
+   "execution_count": null,
+   "id": "anonymous-rotation",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 4242 validated image filenames.\n",
-      "Found 1061 validated image filenames.\n",
-      "Found 1326 validated image filenames.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
-    "image_generator = ImageDataGenerator(rescale = 1./255.,\n",
-    "                                     rotation_range = 10, zoom_range = 0.2)\n",
+    "# baixando os pesos treinados da rede inception\n",
+    "!wget --no-check-certificate \\\n",
+    "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
+    "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "compact-knife",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# referenciando o local em que os pesos estão armazenados\n",
+    "local_weights_file = '/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
     "\n",
-    "# criando o gerador de imagens de treinamento \n",
-    "train_generator = image_generator.flow_from_dataframe(\n",
-    "                                                      dataframe = train_df,\n",
-    "                                                      directory = '',\n",
-    "                                                      x_col = 'filepath',\n",
-    "                                                      y_col = 'target',\n",
-    "                                                      batch_size = 32,\n",
-    "                                                      seed = 42,\n",
-    "                                                      shuffle = True,\n",
-    "                                                      class_mode = 'raw',\n",
-    "                                                      color_mode = 'rgb',\n",
-    "                                                      target_size = (256, 256))\n",
-    "# criando o gerador de imagens de validação \n",
-    "valid_generator = image_generator.flow_from_dataframe(\n",
-    "                                                      dataframe = validation_df,\n",
-    "                                                      directory = '.', \n",
-    "                                                      x_col = 'filepath',\n",
-    "                                                      y_col = 'target',\n",
-    "                                                      batch_size = 32,\n",
-    "                                                      seed = 42,\n",
-    "                                                      shuffle = True,\n",
-    "                                                      class_mode = 'raw',\n",
-    "                                                      target_size = (256, 256))\n",
+    "# carregando a arquitetura inception pré-treinada\n",
+    "pre_trained_model = InceptionV3(input_shape = (256, 256, 3), \n",
+    "                                include_top = False, \n",
+    "                                weights = None)\n",
     "\n",
-    "# normalizando as imagens de teste \n",
-    "test_datagen = ImageDataGenerator(rescale = 1./255.)\n",
+    "# carregando os pesos treinados com outros dados \n",
+    "pre_trained_model.load_weights(local_weights_file)\n",
     "\n",
-    "test_generator = test_datagen.flow_from_dataframe(\n",
-    "                                                  dataframe = test_df, \n",
-    "                                                  directory = '.',\n",
-    "                                                  x_col = 'filepath',\n",
-    "                                                  y_col = 'target',\n",
-    "                                                  batch_size = 32,\n",
-    "                                                  seed = 42,\n",
-    "                                                  shuffle = True,\n",
-    "                                                  class_mode = 'raw',\n",
-    "                                                  target_size = (256, 256))"
+    "# definindo as flags iniciais  \n",
+    "pre_trained_model.trainable = True\n",
+    "set_trainable = False\n",
+    "\n",
+    "# para a arquitetura inception, a rede será retreinada a partir da camada 'mixed6'\n",
+    "for layer in pre_trained_model.layers:\n",
+    "    if layer.name == 'mixed6':\n",
+    "        set_trainable = True\n",
+    "    if set_trainable:\n",
+    "        layer.trainable = True\n",
+    "    else:\n",
+    "        layer.trainable = False\n",
+    "\n",
+    "# visualizando a arquitetura definida\n",
+    "pre_trained_model.summary()\n",
+    "\n",
+    "# obtendo a última camada como sendo a nomeada por 'mixed7'\n",
+    "last_layer = pre_trained_model.get_layer('mixed7')\n",
+    "last_output = last_layer.output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "double-sound",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# definindo uma camada de achatamento\n",
+    "x = layers.Flatten()(last_output)\n",
+    "# conecatando a rede uma camada com 1024 neurônios e função de ativação relu\n",
+    "x = layers.Dense(units = 1024, activation = 'relu')(x)     \n",
+    "# conecatando a rede uma camada com 128 neurônios e função de ativação relu\n",
+    "x = layers.Dense(units = 512, activation = 'relu')(x) \n",
+    "# aplicando uma camada de dropout com uma taxa de 20% (normalização)\n",
+    "x = layers.Dropout(rate = 0.2)(x)                  \n",
+    "# adicionando uma camada de saída com um neurônio e uma função de ativação sigmoide\n",
+    "x = layers.Dense  (units = 1, activation = 'sigmoid')(x)           \n",
+    "\n",
+    "# conecatando as camadas definidas acima com a arquitetura inception\n",
+    "model = Model(pre_trained_model.input, x) \n",
+    "\n",
+    "# compilando a rede \n",
+    "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.0001), loss = 'binary_crossentropy', \n",
+    "              metrics = ['acc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "found-baker",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# definindo o caminho pelo qual os pesos serão armazenados \n",
+    "filepath = \"transferlearning_weights.hdf5\"\n",
+    "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
+    "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "forward-guide",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# definindo um array de callbacks\n",
+    "callbacks = [checkpoint]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "vital-constitutional",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# treinando a rede neural convolucional\n",
+    "history = model.fit_generator(train_generator, steps_per_epoch = 4242 // 32, \n",
+    "                              validation_data = valid_generator, validation_steps = 1061 // 32,\n",
+    "                              callbacks = callbacks, epochs = 100)"
    ]
   }
  ],
