organizando experimentos com o NIH

--- a/4-experiments/experimento1-dataset5-parte2.ipynb
+++ b/4-experiments/experimento1-dataset5-parte2.ipynb
@@ -152,7 +152,7 @@
    "id": "periodic-standing",
    "metadata": {},
    "source": [
-    "### Aplicando mudança de escala típica"
+    "### Aplicando equalização de histograma"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
-    "image_generator = ImageDataGenerator(rescale = 1./255.,\n",
+    "image_generator = ImageDataGenerator(samplewise_center = True, samplewise_std_normalization = True,\n",
     "                                     rotation_range = 10, zoom_range = 0.2)\n",
     "\n",
     "# criando o gerador de imagens de treinamento \n",
@@ -190,7 +190,7 @@
     "                                                      target_size = (256, 256))\n",
     "\n",
     "# normalizando as imagens de teste \n",
-    "test_datagen = ImageDataGenerator(rescale = 1./255.)\n",
+    "test_datagen = ImageDataGenerator(samplewise_center = True, samplewise_std_normalization = True)\n",
     "\n",
     "test_generator = test_datagen.flow_from_dataframe(\n",
     "                                                  dataframe = test_df, \n",
