--- a/4-experiments/experimento1-dataset1-parte1.ipynb
+++ b/4-experiments/experimento1-dataset1-parte1.ipynb
@@ -1681,11 +1681,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C12xsS7VA0fw",
-        "outputId": "fae4e7e8-9d64-4b93-acc1-e215ec15b816",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C12xsS7VA0fw",
+        "outputId": "fae4e7e8-9d64-4b93-acc1-e215ec15b816"
       },
       "source": [
         "# observando a capacidade de generalização do modelo\r\n",
@@ -1747,7 +1747,7 @@
         "id": "o-jSSOAWCirp"
       },
       "source": [
-        "from sklearn.metrics import precision_score, recall_score, accuracy_score, confusion_matrix\r\n",
+        "from sklearn.metrics import precision_score, recall_score, accuracy_score, f1_score, confusion_matrix\r\n",
         "\r\n",
         "def thresholds(limiar, predict):\r\n",
         "  '''predição para diferentes thresholds'''\r\n",
@@ -1801,22 +1801,23 @@
         "  print('Acurácia:', accuracy_score(predict_, y))\r\n",
         "  print('Precisão', precision_score(predict_, y))\r\n",
         "  print('Sensibilidade:', recall_score(predict_, y)) \r\n",
+        "  print('F1_Score:', f1_score(predict_, y))\r\n",
         "\r\n",
         "  return None"
       ],
       "id": "o-jSSOAWCirp",
-      "execution_count": 109,
+      "execution_count": 111,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pkeXJMmjIyJU",
-        "outputId": "6d875ef8-1366-4f03-d021-669b8d47d0ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "id": "pkeXJMmjIyJU",
+        "outputId": "6d875ef8-1366-4f03-d021-669b8d47d0ac"
       },
       "source": [
         "# plotando a curva da Precisão, Sensibilidade e Acurácia \r\n",
@@ -1844,18 +1845,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "moAfeeufXmeh",
-        "outputId": "f16a186a-5ef6-47cb-f32c-2fde1f14e6fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "moAfeeufXmeh",
+        "outputId": "b5980db7-22a4-4a6d-81ff-4cb8318786f9"
       },
       "source": [
         "# analisando as melhores métricas encontradas para o modelo\r\n",
         "best_metrics(threshold = 0.50, predict = predict, y = y)"
       ],
       "id": "moAfeeufXmeh",
-      "execution_count": 108,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -1865,7 +1866,8 @@
             " [ 1 10]]\n",
             "Acurácia: 0.8928571428571429\n",
             "Precisão 0.8333333333333334\n",
-            "Sensibilidade: 0.9090909090909091\n"
+            "Sensibilidade: 0.9090909090909091\n",
+            "F1_Score: 0.8695652173913043\n"
           ],
           "name": "stdout"
         }
