--- a/4-experiments/experimento1-dataset1-parte1.ipynb
+++ b/4-experiments/experimento1-dataset1-parte1.ipynb
@@ -1679,41 +1679,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C12xsS7VA0fw",
-        "outputId": "fae4e7e8-9d64-4b93-acc1-e215ec15b816"
+        "id": "uffChl8FaUQg"
       },
       "source": [
-        "# observando a capacidade de generalização do modelo\r\n",
-        "model.evaluate(test_generator)"
+        "### Métricas de avaliação do modelo"
       ],
-      "id": "C12xsS7VA0fw",
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1/1 [==============================] - 7s 7s/step - loss: 0.3603 - acc: 0.8929\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0.3603195548057556, 0.8928571343421936]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
-        }
-      ]
+      "id": "uffChl8FaUQg"
     },
     {
       "cell_type": "code",
