--- a/4-experiments/experimento1-dataset1-parte1.ipynb
+++ b/4-experiments/experimento1-dataset1-parte1.ipynb
@@ -1927,6 +1927,7 @@
         "outputId": "cc70a855-e226-416d-bebc-728aebe2619c"
       },
       "source": [
+        "# visualizando a arquitetura do modelo\r\n",
         "model.summary()"
       ],
       "id": "v11nO9V2gmZ6",
